--- a/assets/css/1Group001_12345_iPhone Buy.css
+++ b/assets/css/1Group001_12345_iPhone Buy.css
@@ -23,9 +23,19 @@ a {
   padding: 20px 40px;
   background-color: #f8f8f8;
 }
+.site-header .logo img {
+  width: 2rem;
+  height: auto;
+  display: flex;
+  align-items: center; 
+}
+
 .site-header .logo a {
-  font-size: 1.2rem;
-  font-weight: bold;
+  display: flex;
+  align-items: center; /* vertically centers img and text */
+  text-decoration: none; /* optional: removes underline */
+  font-size: 0.75rem;
+  gap: 8px;
 }
 .main-nav ul {
   list-style: none;
